tests/spec/pass/interface_import.aja
import (
    {
        Speaker
        make
    } from "modules/iface_lib"
)

fuc greet(s: Speaker) -> str:
    return s.speak("Halo")

who = make("Nia")
print(greet(who))
