tests/spec/fail/generic_map_empty_lock_mismatch.aja
fuc mark_scores(scores: map[str, int]) -> void:
    return

scores = {}
mark_scores(scores)
scores["x"] = "oops"
